--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 /* purgecss start ignore */
 html,
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 #nprogress {
